revamped login, sign up and links

--- a/views/profile/index.handlebars
+++ b/views/profile/index.handlebars
@@ -1,7 +1,3 @@
-{{#each success}}
-  <div class="alert alert-danger">{{this}}</div>
-{{/each}}
-
 <header class="intro-header" style="background-image: url('/img/about-bg.jpg')">
   <div class="container">
     <div class="row">
@@ -19,7 +15,11 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      <p>Random Profile Info..</p>
+      <p>Random Profile Info..
+
+      {{userProfile.bio}}
+
+      </p>
     </div>
   </div>
 </div>
