--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -16,15 +16,17 @@
           <span class="sr-only">Toggle navigation</span>
           Menu <i class="fa fa-bars"></i>
         </button>
-        <a class="navbar-brand" href="/">Start Bootstrap</a>
+        <a class="navbar-brand" href="/posts">weDev  {{cur_user.rights}}</a>
       </div>
 
       <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
         <ul class="nav navbar-nav navbar-right">
-          <li><a href="/">Home</a></li>
-          <li><a href="/users">Users</a></li>
-          <li><a href="/posts">Posts</a></li>
           {{#if cur_user}}
+            {{#if cur_user.admin}}
+              <li><a href="/users">Users</a></li>
+            {{/if}}
+            <li><a href="/profile">Profile</a></li>
+            <li><a href="/posts">Posts</a></li>
             <li id="logout"><a href="#">Logout</a></li>
           {{ else }}
             <li><a href="/login">Login</a></li>
@@ -67,7 +69,7 @@
               </a>
             </li>
           </ul>
-          <p class="copyright text-muted">Copyright &copy; Your Website 2016</p>
+          <p class="copyright text-muted">Copyright &copy; Stark Labs 2017</p>
         </div>
       </div>
     </div>
