--- a/views/sign-up/index.handlebars
+++ b/views/sign-up/index.handlebars
@@ -13,23 +13,38 @@
 </header>
 
 <div class="container">
+
+
+
+          {{#if error}}
+          <div class="form-group col-xs-12 floating-label-form-group controls">
+            <div class="alert alert-danger"><center>ERROR</center></div>
+          </div>
+          {{/if}}
+          
   <div class="row">
+
+
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <form name="sign-up" action="/sign-up" method="post">
         <div class="row control-group">
-          <div class="form-group col-xs-12 floating-label-form-group controls">
+          <div class="form-group col-xs-6 floating-label-form-group controls">
             <label>First Name</label>
             <input type="text" class="form-control" placeholder="First Name" name="firstName" required data-validation-required-message="Please enter your first name.">
             <p class="help-block text-danger"></p>
           </div>
-        </div>
-        <div class="row control-group">
-          <div class="form-group col-xs-12 floating-label-form-group controls">
+
+
+
+
+
+          <div class="form-group col-xs-6 floating-label-form-group controls">
             <label>Last Name</label>
             <input type="text" class="form-control" placeholder="Last Name" name="lastName" required data-validation-required-message="Please enter your first name.">
             <p class="help-block text-danger"></p>
           </div>
         </div>
+
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>Username</label>
@@ -37,6 +52,27 @@
             <p class="help-block text-danger"></p>
           </div>
         </div>
+
+
+        <div class="row control-group">        
+          <div class="form-group col-xs-12 floating-label-form-group controls">
+            <label>Account Type</label>
+              <div class="col-xs-3">
+                Customer
+                <input type='radio' name="accountType" id="Customer" value="Customer">
+              </div>
+              <div class="col-xs-3">
+                Developer
+                <input type='radio' name="accountType" id="Developer" value="Developer" required >
+                <p class="help-block text-danger"></p>
+              </div>
+              
+          </div>
+        </div>
+
+
+
+
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>Email Address</label>
@@ -44,6 +80,8 @@
             <p class="help-block text-danger"></p>
           </div>
         </div>
+
+
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>Password</label>
@@ -51,10 +89,13 @@
             <p class="help-block text-danger"></p>
           </div>
         </div>
+
+        
+
         <br>
         <div class="row">
           <div class="form-group col-xs-12">
-              <button type="submit" class="btn btn-default">Send</button>
+              <button type="submit" class="btn btn-default">Sign up</button>
           </div>
         </div>
       </form>
