added approvals, redirects. updated post. fixed profile img

--- a/views/posts/new/index.handlebars
+++ b/views/posts/new/index.handlebars
@@ -24,8 +24,22 @@
         </div>
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
-            <label>Body</label>
-            <input type="text" class="form-control" placeholder="Body" name="body" required data-validation-required-message="Please enter a body.">
+            <label>Description</label>
+            <input type="text" class="form-control" placeholder="Description" name="body" required data-validation-required-message="Please enter a body.">
+            <p class="help-block text-danger"></p>
+          </div>
+        </div>
+        <div class="row control-group">
+          <div class="form-group col-xs-12 floating-label-form-group controls">
+            <label>Biding Deadline</label>
+            <input type="datetime-local" class="form-control" name="bidingDeadline" required data-validation-required-message="Please enter a date and time.">
+            <p class="help-block text-danger"></p>
+          </div>
+        </div>
+        <div class="row control-group">
+          <div class="form-group col-xs-12 floating-label-form-group controls">
+            <label>Completion Deadline</label>
+            <input type="datetime-local" class="form-control" name="completionDeadline" required data-validation-required-message="Please enter a date and time.">
             <p class="help-block text-danger"></p>
           </div>
         </div>
