--- a/views/profile/index.handlebars
+++ b/views/profile/index.handlebars
@@ -14,6 +14,9 @@
 
 <div class="container">
   <div class="row">
+  <div class="col-lg-1 col-lg-offset-2 col-md-10 col-md-offset-1">
+      <img src="/profile_pics/{{profile.profileImage}}" class="img-rounded" alt="" style="width:200px">
+    </div>
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <p>Random Profile Info..
 
