--- a/views/set-up/index.handlebars
+++ b/views/set-up/index.handlebars
@@ -24,8 +24,35 @@
 
 
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      <form name="set-up" action="/set-up" method="post">
+      <form name="upload-profile" action="/set-up" method="post" enctype="multipart/form-data">
+
+              <div class="row control-group">
+          <div class="form-group col-xs-6 floating-label-form-group controls">
+            <label>First Name</label>
+            <input type="text" class="form-control" placeholder="First Name" name="firstName" required data-validation-required-message="Please enter your first name.">
+            <p class="help-block text-danger"></p>
+          </div>
+
+
+
+          <div class="form-group col-xs-6 floating-label-form-group controls">
+            <label>Last Name</label>
+            <input type="text" class="form-control" placeholder="Last Name" name="lastName" required data-validation-required-message="Please enter your first name.">
+            <p class="help-block text-danger"></p>
+          </div>
+        </div>
         
+        <div class="row control-group">
+          <div class="form-group col-xs-12 floating-label-form-group controls">
+
+            <label >Upload a Profile Picture:</label>
+            <input type="file" name="profileImage" id="profileImage"/>
+            <span class="hint">Supported files: jpg, jpeg, png.</span>
+            <hr class="divider">
+            <br>
+          </div>
+        </div>
+        <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>Bio</label>
             <input type="text" class="form-control" placeholder="Bio" name="bio" required data-validation-required-message="Please fill in your bio.">
