--- a/views/sign-up/index.handlebars
+++ b/views/sign-up/index.handlebars
@@ -21,29 +21,24 @@
             <div class="alert alert-danger"><center>ERROR</center></div>
           </div>
           {{/if}}
+          {{#if usernameTaken}}
+          <div class="form-group col-xs-12 floating-label-form-group controls">
+            <div class="alert alert-danger"><center>Username is taken</center></div>
+          </div>
+          {{/if}}
+
+          {{#if emailTaken}}
+          <div class="form-group col-xs-12 floating-label-form-group controls">
+            <div class="alert alert-danger"><center>Email is taken</center></div>
+          </div>
+          {{/if}}
           
   <div class="row">
 
 
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <form name="sign-up" action="/sign-up" method="post">
-        <div class="row control-group">
-          <div class="form-group col-xs-6 floating-label-form-group controls">
-            <label>First Name</label>
-            <input type="text" class="form-control" placeholder="First Name" name="firstName" required data-validation-required-message="Please enter your first name.">
-            <p class="help-block text-danger"></p>
-          </div>
 
-
-
-
-
-          <div class="form-group col-xs-6 floating-label-form-group controls">
-            <label>Last Name</label>
-            <input type="text" class="form-control" placeholder="Last Name" name="lastName" required data-validation-required-message="Please enter your first name.">
-            <p class="help-block text-danger"></p>
-          </div>
-        </div>
 
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
