--- a/views/users/single/index.handlebars
+++ b/views/users/single/index.handlebars
@@ -15,23 +15,31 @@
 <div class="container">
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-      {{#each allPosts}}
-        <div class="post-preview">
-          <a href="/posts/{{../user.username}}/{{this.slug}}">
-            <h2 class="post-title">
-              {{this.title}}
-            </h2>
-          </a>
+      <form name="edit-user" method="POST" action="/users/{{user.username}}?_method=PUT">
+        
+        <div class="row control-group">
+          <div class="form-group col-xs-12 floating-label-form-group controls">
+            <label>Account Type</label>
+            <input type="text" class="form-control" name="accountType" value="{{user.accountType}}" required data-validation-required-message="Please enter Acount Type.">
+            <p class="help-block text-danger"></p>
+          </div>
         </div>
-        <hr>
-      {{/each}}
-      {{#if allPosts}}
-        <ul class="pager">
-          <li class="next">
-              <a href="#">Older Posts &rarr;</a>
-          </li>
-        </ul>
-      {{/if}}
+
+        <div class="row control-group">
+          <div class="form-group col-xs-12 floating-label-form-group controls">
+            <label>Account Status</label>
+            <input type="text" class="form-control" name="accountStatus" value="{{user.accountStatus}}" required data-validation-required-message="Please enter Acount Status.">
+            <p class="help-block text-danger"></p>
+          </div>
+        </div>
+
+        <br>
+        <div class="row">
+          <div class="form-group col-xs-6 text-right">
+              <button type="submit" class="btn btn-default">Edit</button>
+          </div>
+      </form>
     </div>
   </div>
 </div>
+
