added Biding function

--- a/views/approval-status/index.handlebars
+++ b/views/approval-status/index.handlebars
@@ -5,7 +5,7 @@
         <div class="site-heading">
           <h1>weDev</h1>
           <hr class="small">
-          <span class="subheading">CTP</span>
+          <span class="subheading">weDev</span>
         </div>
       </div>
     </div>
