--- a/views/posts/index.handlebars
+++ b/views/posts/index.handlebars
@@ -14,9 +14,9 @@
 <div class="container">
   <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-        {{#if cur_user}}
+        {{#if customer}}
         <div class="create-post">
-          <a class="btn btn-default" href="/posts/new">Create Post</a>
+          <a class="btn btn-default" href="/posts/new-post">Create Post</a>
         </div>
         {{/if}}
         {{#each allPosts}}
