--- a/views/sign-up/index.handlebars
+++ b/views/sign-up/index.handlebars
@@ -5,7 +5,7 @@
         <div class="page-heading">
           <h1>Sign Up</h1>
           <hr class="small">
-          <span class="subheading">Join our blog!</span>
+          <span class="subheading">Join our Turk System!</span>
         </div>
       </div>
     </div>
