--- a/views/posts/single/index.handlebars
+++ b/views/posts/single/index.handlebars
@@ -16,45 +16,37 @@
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <p>Current Bid: {{currentBid}}</p>
-      <script>
-// Set the date we're counting down to
-var countDownDate = new Date("{{post.bidingDeadline}}").getTime();
-
-// Update the count down every 1 second
-var x = setInterval(function() {
-
-    // Get todays date and time
-    var now = new Date().getTime();
-    
-    // Find the distance between now an the count down date
-    var distance = countDownDate - now;
-    
-    // Time calculations for days, hours, minutes and seconds
-    var days = Math.floor(distance / (1000 * 60 * 60 * 24));
-    var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
-    var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
-    var seconds = Math.floor((distance % (1000 * 60)) / 1000);
-    
-    // Output the result in an element with id="demo"
-    document.getElementById("demo").innerHTML = days + "d " + hours + "h "
-    + minutes + "m " + seconds + "s ";
-    
-    // If the count down is over, write some text 
-    if (distance < 0) {
-        clearInterval(x);
-        document.getElementById("demo").innerHTML = "EXPIRED";
-    }
-}, 1000);
-</script>
-
       <p class="col-xs-3">Time left to bid:</p>
-      <p id="demo" class="col-xs-9" ></p>
+      <p id="countDown" class="col-xs-9" ></p>
       <p>{{post.body}}</p>
       {{#if developer}}
         <div class="create-post">
           <a class="btn btn-default" href="/posts/{{user.username}}/{{post.slug}}/new-bid">Create a bid </a>
         </div>
-        {{/if}}
-    </div>
+      {{/if}}
+      {{#if owner}}
+        <div class="update-post">
+          <a class="btn btn-default" href="/posts/{{user.username}}/{{post.slug}}/edit">Update post </a>
+        </div>
+      {{/if}}
+    </div> 
   </div>
 </div>
+
+<script>
+  var countDownDate = new Date("{{post.bidingDeadline}}").getTime();
+  var x = setInterval(function() {
+    var now = new Date().getTime();
+    var distance = countDownDate - now;
+    var days = Math.floor(distance / (1000 * 60 * 60 * 24));
+    var hours = Math.floor((distance % (1000 * 60 * 60 * 24)) / (1000 * 60 * 60));
+    var minutes = Math.floor((distance % (1000 * 60 * 60)) / (1000 * 60));
+    var seconds = Math.floor((distance % (1000 * 60)) / 1000);
+    document.getElementById("countDown").innerHTML = days + "d " + hours + "h "
+    + minutes + "m " + seconds + "s ";
+    if (distance < 0) {
+        clearInterval(x);
+        document.getElementById("countDown").innerHTML = "EXPIRED";
+    }
+  }, 1000);
+</script>
