updated views for homepage, login, users, profile, etc.

--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -3,7 +3,7 @@
     </br>weDev an internet marketplace comes to make system solutions better and efficient.
     </br>Join millions of business clients and software developers now.</br>
     <div class="btn waves-effect waves-lighten red darken-3">Get Started Here.</div></br></br></p>
-    <h5>Browse<i class="material-icons">whatshot</i></h5></br></br>
+    <h5>Browse<i class="material-icons">whatshot</i></h5>
     <form>
       <div class="input-field">
         <input id="search" type="search">
@@ -39,31 +39,57 @@
           <p>Spotify</p>
         </div>
       </div>
-
-
-
   </div>
 
-
-    <div id="test2" class="col s12 center-align"><h4>About</h4><p><strong>As a developer,</strong> you can browse through listings posted by renowned business clients to build and implement required systems on a bidding timeline, earn quick money freelancing, at the right comfort of your own home. Payments are safe, secure and guaranteed automatic once files have been submitted.
+    <div id="about-section" class="col s6"><h4>About</h4><p><strong>As a developer,</strong> you can browse through listings posted by renowned business clients to build and implement required systems on a bidding timeline, earn quick money freelancing, at the right comfort of your own home. Payments are safe, secure and guaranteed automatic once files have been submitted.
 
     </br></br><strong>As a client,</strong> connect and collaborate with the most professional software developers and figure out which is right for your system demands which you can post in our system to receive major exposure to your work. Have your work done for you.
 
   </br></br><strong>Not sure yet?</strong> As a <strong>visitor,</strong> you can use a temporary username and password to browse through system demands, developer profiles, as well as business client profiles.
+  </p>
+  <h4>Our Success.</h4>
 
-    </p></div>
-    <div id="test3" class="col s12 center-align"><h4>Sign Up</h4><p>Sumus tam adultis. Non est enim tibi nescio fingunt. Confusio esse cupio. Scio te debeo meae. At etiam, ut caveant ab his eu. In tuo positum, idem fecissem. Constitutione, quam molesta est mihi tres menses nescio quid de contractu fines nostros. Scis quare hoc facere. Lorem satis quaesitum. 
+  <canvas id="myChart" width="100" height="50"></canvas>
+<script>
+var ctx = document.getElementById("myChart").getContext('2d');
+var myChart = new Chart(ctx, {
+    type: 'bar',
+    data: {
+        labels: ["Total Users", "Renowned Clients", "Professional Developers", "Total Money Earned"],
+        datasets: [{
+            label: 'weDev',
+            data: [1000, 400, 600, 1235],
+            backgroundColor: [
+                'rgba(255, 99, 132, 0.2)',
+                'rgba(54, 162, 235, 0.2)',
+                'rgba(255, 206, 86, 0.2)',
+                'rgba(75, 192, 192, 0.2)'
+            ],
+            borderColor: [
+                'rgba(255,99,132,1)',
+                'rgba(54, 162, 235, 1)',
+                'rgba(255, 206, 86, 1)',
+                'rgba(75, 192, 192, 1)'
+            ],
+            borderWidth: 2
+        }]
+    },
+    options: {
+        scales: {
+            yAxes: [{
+                ticks: {
+                    beginAtZero:true
+                }
+            }]
+        }
+    },
 
-    Loquélæ. Brevis oratio. Hodie particeps tua perdideris. Quid sui nominis - Emilio? Emilio gradiens ad carcerem. Tulitque omnem pecuniam tuam in DEA tuus Lab. Vos got nihil. Quadratum unum. Et ego agnosco rem, nisi te scire elit. Cogito ... maybe vos possem socium ascendit. 
+    animation: {
+      duration: 6000,
+      easing: 'easeInOutBounce'
+    }
+});
+</script>
 
-    Paenitet me quod tu me rogas? Oh, sic, qui stultus plastic continentis rogavi te ut emas. Vides non manducare acidum hydrofluoric per plastic. Erit autem dissolvere metalli petram, vitrum, tellus. Ita quod illic '. Quam de aliquo cum aliqua interdum, maybe? Aliquid viride, huh? Quam vos sunt etiam vivere? 
+  </div>
 
-    Quinquaginta septem est - pars tua, triginta quinque millia. Est autem extra plus quindecim, tota tua est, quom meruisset. Fac nos fecit. SIC. Puto quia una res potest - venimus in cognitionem. Vide pretium in manibus. Sed finge iustum faciens quod qualibet septimana. SIC. Duis duas libras triginta quinque milia pondo.</p></div>
-    <div id="test4" class="col s12 center-align"><h4>Login</h4><p>Sumus tam adultis. Non est enim tibi nescio fingunt. Confusio esse cupio. Scio te debeo meae. At etiam, ut caveant ab his eu. In tuo positum, idem fecissem. Constitutione, quam molesta est mihi tres menses nescio quid de contractu fines nostros. Scis quare hoc facere. Lorem satis quaesitum. 
-
-    Loquélæ. Brevis oratio. Hodie particeps tua perdideris. Quid sui nominis - Emilio? Emilio gradiens ad carcerem. Tulitque omnem pecuniam tuam in DEA tuus Lab. Vos got nihil. Quadratum unum. Et ego agnosco rem, nisi te scire elit. Cogito ... maybe vos possem socium ascendit. 
-
-    Paenitet me quod tu me rogas? Oh, sic, qui stultus plastic continentis rogavi te ut emas. Vides non manducare acidum hydrofluoric per plastic. Erit autem dissolvere metalli petram, vitrum, tellus. Ita quod illic '. Quam de aliquo cum aliqua interdum, maybe? Aliquid viride, huh? Quam vos sunt etiam vivere? 
-
-    Quinquaginta septem est - pars tua, triginta quinque millia. Est autem extra plus quindecim, tota tua est, quom meruisset. Fac nos fecit. SIC. Puto quia una res potest - venimus in cognitionem. Vide pretium in manibus. Sed finge iustum faciens quod qualibet septimana. SIC. Duis duas libras triginta quinque milia pondo.
-    </p></div>
