--- a/views/login/index.handlebars
+++ b/views/login/index.handlebars
@@ -1,14 +1,7 @@
-<header class="intro-header" style="background-image: url('/img/contact-bg.jpg')">
-  <div class="container">
-    <div class="row">
-      <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-        <div class="page-heading">
-          <h1>Login</h1>
-          <hr class="small">
-        </div>
-      </div>
-    </div>
-  </div>
+<header>
+  <h1>Login</h1>
+  <hr class="small">
+  <span class="subheading"><i id="header-logo" class="material-icons">data_usage</i></span>
 </header>
 
 <div class="container">
@@ -35,7 +28,7 @@
         <br>
         <div class="row">
           <div class="form-group col-xs-12">
-              <button type="submit" class="btn btn-default">Login</button>
+              <button type="submit" class="btn">Login</button>
           </div>
         </div>
       </form>
