--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -1,80 +1,98 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <meta charset="utf-8">
-  <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
-  <link href="/css/clean-blog.min.css" rel="stylesheet">
-  <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-  <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
-  <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+  <title>weDev</title>
+  <meta charset="utf-8" lang="en">
 </head>
-<body>
-  <nav class="navbar navbar-default navbar-custom navbar-fixed-top">
-    <div class="container-fluid">
-      <div class="navbar-header page-scroll">
-        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1">
-          <span class="sr-only">Toggle navigation</span>
-          Menu <i class="fa fa-bars"></i>
-        </button>
-        <a class="navbar-brand" href="/posts">weDev  {{cur_user.rights}}</a>
-      </div>
+  <!--Import Google Icon Font-->
+      <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+      <!--Import materialize.css-->
+      <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
 
-      <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
-        <ul class="nav navbar-nav navbar-right">
+      <link rel="stylesheet" type="text/css" href="style.css">
+
+      <!--Chart.js CDN-->
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.bundle.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.1/Chart.js"></script>
+
+        <link href="/vendor/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/css/clean-blog.min.css" rel="stylesheet">
+        <link href="/vendor/font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+        <link href='http://fonts.googleapis.com/css?family=Lora:400,700,400italic,700italic' rel='stylesheet' type='text/css'>
+        <link href='http://fonts.googleapis.com/css?family=Open+Sans:300italic,400italic,600italic,700italic,800italic,400,300,600,700,800' rel='stylesheet' type='text/css'>
+
+      <!--Let browser know website is optimized for mobile-->
+      <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+<body>
+  <nav class="nav-extended">
+      <div class="nav-wrapper blue darken-3">
+        <a href="#" class="brand-logo"><i id="header-logo" class="material-icons">data_usage</i>weDev</a>
+        <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
+        <ul id="nav-mobile" class="right hide-on-med-and-down">
+          <li><a href="/">Home</a></li>
+          <li><a href="/#about-section">About</a></li>
+
+          {{#if admin}}
+          <li><a href="/users">Users</a></li>
+          {{/if}}
+
           {{#if cur_user}}
-            {{#if cur_user.admin}}
-              <li><a href="/users">Users</a></li>
-            {{/if}}
+          <!--Dropdown structure-->
+          <ul id="dropdown" class="dropdown-content">
             <li><a href="/profile">Profile</a></li>
-            <li><a href="/posts">Posts</a></li>
-            <li id="logout"><a href="#">Logout</a></li>
-          {{ else }}
-            <li><a href="/login">Login</a></li>
+            <li><a href="#">Bids</a></li>
+            <li><a href="#">Settings</a></li>
+          </ul>
+
+            <li id="profile"><a href="/profile">Profile</a></li>
+            <li id="logout"><a href="#">Sign out</a></li>
+          {{else}}  
             <li><a href="/sign-up">Sign Up</a></li>
+            <li><a href="/login">Login</a></li>
+          {{/if}}
+
+        </ul>
+        <ul class="side-nav" id="mobile-demo">
+          <li><a href="/">Home</a></li>
+          <li><a href="/#about-section">About</a></li>
+          {{#if cur_user}}
+            <li id="profile"><a href="/profile">Profile</a></li>
+            <li id="logout"><a href="#">Sign out</a></li>
+          {{else}}  
+          <li><a href="/sign-up">Sign Up</a></li>
+          <li><a href="/login">Login</a></li>
           {{/if}}
         </ul>
       </div>
-    </div>
   </nav>
 
   {{{ body }}}
+        <footer class="page-footer blue darken-2">
+          <div class="container">
+            <div class="row">
+              <div class="col l6 s12">
+                <h5 class="white-text">weDev</h5>
+                <p class="grey-text text-lighten-4">Achieve success with us.</p>
+              </div>
+              <div class="col l6 s12">
+                <h5 class="white-text">Have any questions?</h5>
+                <ul>
+                  <li><a class="grey-text text-lighten-4" href="#!">Contact Us</a></li>
+                </ul>
+              </div>
+            </div>
+          </div>
+          <div class="footer-copyright blue darken-3">
+            <div class="container">
+            © 2017 Stark Labs
+            </div>
+          </div>
+        </footer>
 
-  <footer>
-    <div class="container">
-      <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-          <ul class="list-inline text-center">
-            <li>
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-twitter fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-facebook fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-            <li>
-              <a href="#">
-                <span class="fa-stack fa-lg">
-                  <i class="fa fa-circle fa-stack-2x"></i>
-                  <i class="fa fa-github fa-stack-1x fa-inverse"></i>
-                </span>
-              </a>
-            </li>
-          </ul>
-          <p class="copyright text-muted">Copyright &copy; Stark Labs 2017</p>
-        </div>
-      </div>
-    </div>
-  </footer>
 
+  <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
+  <script src="https://cdnjs.cloudflare.com/ajax/libs/handlebars.js/2.0.0/handlebars.js"></script>
   <script src="/vendor/jquery/jquery.min.js"></script>
   <script src="/vendor/bootstrap/js/bootstrap.min.js"></script>
   <script src="/js/jqBootstrapValidation.js"></script>
