--- a/views/sign-up/index.handlebars
+++ b/views/sign-up/index.handlebars
@@ -1,16 +1,15 @@
-
-<header class="intro-header" style="background-image: url('/img/contact-bg.jpg')">
-  <div class="container">
+<header class="sign-up-header">
+{{!--   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-        <div class="page-heading">
+        <div class="page-heading"> --}}
           <h1>Sign Up</h1>
           <hr class="small">
           <span class="subheading">Join our Turk System!</span>
-        </div>
+{{!--         </div>
       </div>
     </div>
-  </div>
+  </div> --}}
 </header>
 
 <div class="container">
@@ -44,7 +43,7 @@
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>Username</label>
-            <input type="text" class="form-control" placeholder="Username" name="username" required data-validation-required-message="Please enter your username.">
+            <input type="text" class="form-control" name="username" required data-validation-required-message="Please enter your username.">
             <p class="help-block text-danger"></p>
           </div>
         </div>
@@ -52,17 +51,12 @@
 
         <div class="row control-group">        
           <div class="form-group col-xs-12 floating-label-form-group controls">
-            <label>Account Type</label>
-              <div class="col-xs-3">
-                Customer
-                <input type='radio' name="accountType" id="Customer" value="Customer">
-              </div>
-              <div class="col-xs-3">
-                Developer
-                <input type='radio' name="accountType" id="Developer" value="Developer" required >
-                <p class="help-block text-danger"></p>
-              </div>
-              
+                <p>
+                  <input name="accountType" type="radio" id="Customer" value="Customer" required />
+                  <label for="Customer">Customer</label>
+                  <input name="accountType" type="radio" id="Developer" value="Developer" />
+                  <label for="Developer">Developer</label>
+                </p>
           </div>
         </div>
 
@@ -72,7 +66,7 @@
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>Email Address</label>
-            <input type="email" class="form-control" placeholder="Email Address" name="email" required data-validation-required-message="Please enter your email address.">
+            <input type="email" class="form-control" name="email" required data-validation-required-message="Please enter your email address.">
             <p class="help-block text-danger"></p>
           </div>
         </div>
@@ -81,17 +75,14 @@
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>Password</label>
-            <input type="password" class="form-control" placeholder="Password" name="password" required data-validation-required-message="Please enter your password.">
+            <input type="password" class="form-control" name="password" required data-validation-required-message="Please enter your password.">
             <p class="help-block text-danger"></p>
           </div>
         </div>
-
-        
-
         <br>
         <div class="row">
           <div class="form-group col-xs-12">
-              <button type="submit" class="btn btn-default">Sign up</button>
+              <button type="submit" class="btn">Register</button>
           </div>
         </div>
       </form>
