--- a/views/users/index.handlebars
+++ b/views/users/index.handlebars
@@ -1,9 +1,9 @@
-<header class="intro-header" style="background-image: url('/img/home-bg.jpg')">
+<header class="intro-header">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <div class="site-heading">
-          <h1>Users</h1>
+          <h3>Users</h3>
           <hr class="small">
         </div>
       </div>
@@ -37,7 +37,7 @@
       {{/each}}
       <ul class="pager">
         <li class="next">
-            <a href="#">Older Posts &rarr;</a>
+            <a href="#">Next &rarr;</a>
         </li>
       </ul>
     </div>
