added dropdown bar for user and updated profile, set-up, etc

--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -55,10 +55,10 @@ var ctx = document.getElementById("myChart").getContext('2d');
 var myChart = new Chart(ctx, {
     type: 'bar',
     data: {
-        labels: ["Total Users", "Renowned Clients", "Professional Developers", "Total Money Earned"],
+        labels: ["Total Users", "Renowned Clients", "Professional Developers", "Most Projects", "Top Earning Developer"],
         datasets: [{
             label: 'weDev',
-            data: [1000, 400, 600, 1235],
+            data: [1000, 400, 600, 50, 12345],
             backgroundColor: [
                 'rgba(255, 99, 132, 0.2)',
                 'rgba(54, 162, 235, 0.2)',
