--- a/views/layouts/main.handlebars
+++ b/views/layouts/main.handlebars
@@ -24,9 +24,15 @@
       <!--Let browser know website is optimized for mobile-->
       <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 <body>
+      <ul id="dropdown1" class="dropdown-content">
+      <li><a href="/profile">Profile</a></li>
+      <li><a href="#!">Settings</a></li>
+      <li class="divider"></li>
+      <li id="logout"><a href="#">Sign Out</a></li>
+    </ul>
   <nav class="nav-extended">
       <div class="nav-wrapper blue darken-3">
-        <a href="#" class="brand-logo"><i id="header-logo" class="material-icons">data_usage</i>weDev</a>
+        <a href="/" class="brand-logo"><i id="header-logo" class="material-icons">data_usage</i>weDev</a>
         <a href="#" data-activates="mobile-demo" class="button-collapse"><i class="material-icons">menu</i></a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
           <li><a href="/">Home</a></li>
@@ -37,15 +43,10 @@
           {{/if}}
 
           {{#if cur_user}}
-          <!--Dropdown structure-->
-          <ul id="dropdown" class="dropdown-content">
-            <li><a href="/profile">Profile</a></li>
-            <li><a href="#">Bids</a></li>
-            <li><a href="#">Settings</a></li>
-          </ul>
+            <li><a class="dropdown-button" href="#!" data-activates="dropdown1">{{cur_user.username}}<i class="material-icons right">arrow_drop_down</i></a></li>
 
-            <li id="profile"><a href="/profile">Profile</a></li>
-            <li id="logout"><a href="#">Sign out</a></li>
+{{!--             <li id="profile"><a href="/profile">Profile</a></li> --}}
+{{!--             <li id="logout"><a href="#">Sign out</a></li> --}}
           {{else}}  
             <li><a href="/sign-up">Sign Up</a></li>
             <li><a href="/login">Login</a></li>
@@ -67,6 +68,8 @@
   </nav>
 
   {{{ body }}}
+
+
         <footer class="page-footer blue darken-2">
           <div class="container">
             <div class="row">
