--- a/views/set-up/index.handlebars
+++ b/views/set-up/index.handlebars
@@ -57,7 +57,7 @@
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
             <label>Company Website</label>
-            <input type="text" class="form-control" placeholder="Company Website" name="companyWebsite" required data-validation-required-message="Please fill in company website">
+            <input type="url" class="form-control" placeholder="Company Website" name="companyWebsite" required data-validation-required-message="Please fill in company website">
             <p class="help-block text-danger"></p>
           </div>
         </div>
