--- a/views/users/single/index.handlebars
+++ b/views/users/single/index.handlebars
@@ -1,10 +1,9 @@
-<header class="intro-header" style="background-image: url('/img/about-bg.jpg')">
+<header class="intro-header">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <div class="page-heading">
           <h1>{{user.username}}</h1>
-          <hr class="small">
           <span class="subheading">{{user.firstName}} {{user.lastName}}</span>
         </div>
       </div>
