fixed footer, and added browse post to navbar

--- a/views/approval-status/index.handlebars
+++ b/views/approval-status/index.handlebars
@@ -3,9 +3,9 @@
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <div class="site-heading">
-          <h1>weDev</h1>
+          <h4>weDev</h4>
           <hr class="small">
-          <span class="subheading">weDev</span>
+          <span class="subheading">User Registration/Temporary Account</span>
         </div>
       </div>
     </div>
@@ -16,8 +16,9 @@
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
       <div class="post-preview">
-          <h2 class="post-title">APROVAL STATUS:</h2>
-          <h3 class="post-subtitle">{{user.accountStatus}}</h3>
+          <h4 class="center-align">APPROVAL STATUS:</h4>
+          <h5 class="status-subtitle center-align">{{user.accountStatus}}</h5>
+          <p class="center-align">Check back later for credential approval. In the meantime, you can <a href="/posts">browse posts</a> or go to <a href="/">homepage.</a>
         </a>
       </div>
         <hr>
