--- a/views/posts/new-post/index.handlebars
+++ b/views/posts/new-post/index.handlebars
@@ -1,9 +1,9 @@
-<header class="intro-header" style="background-image: url('/img/contact-bg.jpg')">
+<header class="intro-header">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <div class="page-heading">
-          <h1>Create A New Post</h1>
+          <h4>Create A New Post</h4>
           <hr class="small">
         </div>
       </div>
@@ -24,7 +24,7 @@
         </div>
         <div class="row control-group">
           <div class="form-group col-xs-12 floating-label-form-group controls">
-            <label>Description</label>
+            <label>Description and Project Requirements and Specifications.</label>
             <input type="text" class="form-control" placeholder="Description" name="body" required data-validation-required-message="Please enter a body.">
             <p class="help-block text-danger"></p>
           </div>
