--- a/views/posts/edit/index.handlebars
+++ b/views/posts/edit/index.handlebars
@@ -1,9 +1,9 @@
-<header class="intro-header" style="background-image: url('/img/contact-bg.jpg')">
+<header class="intro-header">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <div class="page-heading">
-          <h1>Edit A Post</h1>
+          <h4>Edit A Post</h4>
           <hr class="small">
         </div>
       </div>
@@ -31,7 +31,7 @@
         </div>
         <div class="row control-group">
           <div class="form-group col-xs-6 floating-label-form-group controls">
-            <label>Biding Deadline</label>
+            <label>Bidding Deadline</label>
             <input type="datetime-local" class="form-control" name="bidingDeadline" value="{{post.bidingDeadline}}" required data-validation-required-message="Please enter a date and time.">
             <p class="help-block text-danger"></p>
           </div>
