--- a/views/posts/single/index.handlebars
+++ b/views/posts/single/index.handlebars
@@ -1,9 +1,9 @@
-<header class="intro-header" style="background-image: url('/img/about-bg.jpg')">
+<header class="intro-header">
   <div class="container">
     <div class="row">
       <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
         <div class="page-heading">
-          <h1>{{post.title}}</h1>
+          <h4>{{post.title}}</h4>
           <hr class="small">
           <span class="subheading">By: {{user.username}}</span>
         </div>
