--- a/views/profile/index.handlebars
+++ b/views/profile/index.handlebars
@@ -18,11 +18,21 @@
       <img src="/profile_pics/{{profile.profileImage}}" class="img-rounded" alt="" style="width:200px">
     </div>
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+      
+      {{#if developer}}
       <p>Biography:
-
-      {{userProfile.bio}}
-
+        {{profile.bio}}
       </p>
+      {{/if}}
+      {{#if customer}}
+      <p>Website:
+        <a href="{{profile.companyWebsite}}">{{profile.companyWebsite}}</a>
+      </p>
+      <p>Company:
+        {{profile.companyInfo}}
+      </p>
+      {{/if}}
+
     </div>
   </div>
 </div>
