--- a/views/posts/index.handlebars
+++ b/views/posts/index.handlebars
@@ -21,12 +21,12 @@
         {{/if}}
         {{#each allPosts}}
           <div class="post-preview">
-              <a href="/posts/{{this.user.username}}/{{this.slug}}">
+              <a href="/posts/{{this.user.username}}/{{this.slug}}/">
                   <h2 class="post-title">
                       {{this.title}}
                   </h2>
               </a>
-              <p class="post-meta">Posted by <a href="/users/{{this.user.username}}">{{this.user.username}}</a></p>
+              <p class="post-meta">Posted by <a href="/users/{{this.user.username}}/">{{this.user.username}}</a></p>
           </div>
           <hr>
         {{/each}}
