--- a/views/users/index.handlebars
+++ b/views/users/index.handlebars
@@ -15,52 +15,41 @@
   <div class="row">
     <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
 
-      <h1>Pending Users:</h1>
+      <div class="input-field">
+        <input id="myInput" onkeyup="myFunction()" type="search" placeholder="Search for users..">
+        <label class="label-icon" for="search"><i class="material-icons">search</i></label>
+      </div>
+      
+      <ul id="myUL">
       {{#each allPendingUsers}}
-        <div class="post-preview">
+        <li>
           <a href="/users/{{this.username}}">
-            <h2 class="post-title">
-              <h4 class="col s4">{{this.username}}</h4>
-              <h4 class="col s4" style="color:black;">{{this.accountType}}</h4>
-              <h4 class="col s4" style="color:#FF8C00;">Pending<h4>
-            </h2>
+              <h7 class="col s4">{{this.username}}</h7>
+              <h7 class="col s4" style="color:black;">{{this.accountType}}</h7>
+              <h7 class="col s4" style="color:#FF8C00;">Pending<h7>
           </a>
-        </div>
-        <br>
-        
+        </li>
       {{/each}}
-
-      <hr>
-
-      <h1>Approved Users:</h1>
       {{#each allApprovedUsers}}
-        <div class="post-preview">
+        <li>
           <a href="/users/{{this.username}}">
-            <h2 class="post-title">
-              <h4 class="col s4">{{this.username}}</h4>
-              <h4 class="col s4" style="color:black;">{{this.accountType}}</h4>
-              <h4 class="col s4" style="color:green;">Approved<h4>
-            </h2>
-          </a>
-        </div>
-        <br>        
+              <h7 class="col s4">{{this.username}}</h7>
+              <h7 class="col s4" style="color:black;">{{this.accountType}}</h7>
+              <h7 class="col s4" style="color:green;">Approved<h7>
+             </a>
+        </li>
       {{/each}}
-      <hr>
-
-      <h1>Blocked Users:</h1>
       {{#each allBlockedUsers}}
-        <div class="post-preview">
+        <li>
           <a href="/users/{{this.username}}">
-            <h2 class="post-title">
-              <h4 class="col s4">{{this.username}}</h4>
-              <h4 class="col s4" style="color:black;">{{this.accountType}}</h4>
-              <h4 class="col s4" style="color:#8B0000;">Blocked<h4>
-            </h2>
+              <h7 class="col s4">{{this.username}}</h7>
+              <h7 class="col s4" style="color:black;">{{this.accountType}}</h7>
+              <h7 class="col s4" style="color:#8B0000;">Blocked<h7>
           </a>
-        </div>
-        <br>
-        
+        </li>
       {{/each}}
+      </ul>
+
 
       <ul class="pager">
         <li class="next">
@@ -70,3 +59,22 @@
     </div>
   </div>
 </div>
+
+<script>
+function myFunction() {
+    var input, filter, ul, li, a, i;
+    input = document.getElementById("myInput");
+    filter = input.value.toUpperCase();
+    ul = document.getElementById("myUL");
+    li = ul.getElementsByTagName("li");
+    for (i = 0; i < li.length; i++) {
+        a = li[i].getElementsByTagName("a")[0];
+        if (a.innerHTML.toUpperCase().indexOf(filter) > -1) {
+            li[i].style.display = "";
+        } else {
+            li[i].style.display = "none";
+
+        }
+    }
+}
+</script>
