Lots of changes, added wallet

--- a/views/posts/edit/index.handlebars
+++ b/views/posts/edit/index.handlebars
@@ -39,7 +39,7 @@
         <div class="row control-group">
           <div class="form-group col-xs-6 floating-label-form-group controls">
             <label>Completion Deadline</label>
-            <input type="datetime-local" class="form-control" name="completionDeadline" value="{{post.completionDeadline}} required data-validation-required-message="Please enter a date and time.">
+            <input type="datetime-local" class="form-control" name="completionDeadline" value="{{post.completionDeadline}}" required data-validation-required-message="Please enter a date and time.">
             <p class="help-block text-danger"></p>
           </div>
         </div>
