--- a/views/homepage/index.handlebars
+++ b/views/homepage/index.handlebars
@@ -1,8 +1,67 @@
-    <div id="test1" class="col s12 center-align"></br></br><i class="material-icons large">data_usage</i>
+    <div id="home-section" class="col s12 center-align"></br></br><i class="material-icons large">data_usage</i>
       <p>This is WeDev. </br></br>weDev is where clients and developers come to connect.
     </br>weDev an internet marketplace comes to make system solutions better and efficient.
-    </br>Join millions of business clients and software developers now.</br>
-    <div class="btn waves-effect waves-lighten red darken-3">Get Started Here.</div></br></br></p>
+    </br>Join millions of business clients and software developers now.</br></p>
+    <!--modal button-->
+    <div class="container">
+      <div class="row">
+        <div class="col s12 m12 l12 center-align">
+          <button class="btn red darken-3 waves-effect waves-light modal-trigger" data-target="modal1">Get Started</button>
+        </div>
+      </div>
+    </div>
+
+    <!--Modal popup-->
+    <div class="modal modal-fixed-footer" id="modal1">
+      <div class="modal-content">
+        <h4>Sign Up</h4>
+          <div class="row">
+              <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                <form name="sign-up" action="/sign-up" method="post" class="col s12">
+                  <div class="row">
+                      <div class="row">
+                        <div class="input-field col s12">
+                          <input id="username" type="text" class="validate">
+                          <label for="username">Username</label>
+                        </div>
+                  <div class="row">
+                      <p>
+                        <input name="accountType" type="radio" id="Customer" value="Customer" required />
+                        <label for="Customer">Customer</label>
+                        <input name="accountType" type="radio" id="Developer" value="Developer" />
+                        <label for="Developer">Developer</label>
+                      </p>
+                  </div>
+                </div>
+                      <div class="row">
+                        <div class="input-field col s12">
+                          <input id="email" type="email" class="validate">
+                          <label for="email">Email</label>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="input-field col s12">
+                          <input id="password" type="password" class="validate">
+                          <label for="password">Password</label>
+                        </div>
+                      </div>
+                      <div class="row">
+                        <div class="input-field col s12">
+                          <input id="cpassword" type="password" class="validate">
+                          <label for="cpassword">Confirm Password</label>
+                        </div>
+                      </div>
+                  </div>
+                  </form>
+              </div>
+          </div>
+      </div>
+
+      <div class="modal-footer">
+        <button type="submit" class="btn">Register</button>
+        </div>
+      </div>
+
     <h5>Browse<i class="material-icons">whatshot</i></h5>
     <form>
       <div class="input-field">
@@ -84,6 +143,5 @@ var myChart = new Chart(ctx, {
     }
 });
 </script>
-
   </div>
 
